--- a/portfolio/templates/shared/nav.html
+++ b/portfolio/templates/shared/nav.html
@@ -5,7 +5,6 @@
         <div class = "w-1/2 md:w-1/3 xl:w-1/4 flex flex-row">
             <!--Icons - hide for mobile and make hamburger menu size <md> -->
             <div class = "hidden text-3xl text-white w-full md:flex flex-row align-middle items-center gap-10 lg:gap-12 xl:gap-14 ml-16">
-                <!--Home Icon-->
                 <a class = "active:scale-90" href="{% url 'index' %}" > 
                     <span class="hover:text-gray-400 hover:cursor-pointer {% if request.path == '/' %} font-bold text-4xl {% endif %} ">
                         Home
@@ -47,6 +46,6 @@
 		<li class="py-4"><a href="{% url 'index' %}" class="w-full active:scale-95 {% if request.path == '/' %} font-bold text-3xl {% endif %} ">Home</a></li>
 		<li class="py-4"><a href="{% url 'works' %}" class="w-full active:scale-95 {% if request.path == '/works/' %} font-bold text-3xl {% endif %}">Works</a></li>
         <li class="py-4"><a href="{% url 'blog' %}" class="w-full active:scale-95 {% if request.path == '/blog/' %} font-bold text-3xl {% endif %}">Blog</a></li>
-		<li class="py-4"><a href="{% url 'contact' %}" class="w-full active:scale-95 {% if request.path == '/contact/' %} font-bold text-3xl {% endif %}">Contacts</a></li>
+		<li class="py-4"><a href="{% url 'contact' %}" class="w-full active:scale-95 {% if request.path == '/contact/' %} font-bold text-3xl {% endif %}">Contact</a></li>
 	</ul> 
 </nav>
