--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -8,7 +8,7 @@
 {% include 'shared/nav.html' %}
 
 <!--Page Container-->
-<div class = "flex flex-col w-full h-screen bg-slate-200 overflow-auto">
+<div class="flex flex-col w-full min-h-screen justify-between bg-slate-200">
     <!--Page Contents-->
     <div class = "flex flex-col gap-8 p-16">
         <div>
@@ -56,11 +56,10 @@
 
 
     </div>
-    
+    {% include 'shared/footer.html' %}
+
 </div>
 
-
-{% include 'shared/footer.html' %}
 
 
 {% endblock content %}
