added htmx and like button

--- a/portfolio/templates/blog_crud/edit_blog.html
+++ b/portfolio/templates/blog_crud/edit_blog.html
@@ -26,7 +26,8 @@
             
             <!--Enter Caption-->
             {% render_field form.caption class="h-24 border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
-
+            
+            {{ form.media }} 
             <!--Enter Story-->
             {% render_field form.story class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
            
