--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -15,6 +15,10 @@
 
         <!--Alpine JS CDN-->
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>   
+
+        <!--HTMX CDN-->
+        <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+
    
 		{% tailwind_css %}
 
