--- a/portfolio/templates/blog_crud/create_blog.html
+++ b/portfolio/templates/blog_crud/create_blog.html
@@ -20,6 +20,7 @@
             {% render_field form.caption class="h-24 border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
 
             <!--Enter Story-->
+            {{ form.media }} 
             {% render_field form.story class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
            
             <!--Enter image url-->
