--- a/portfolio/templates/blog_crud/story_blog.html
+++ b/portfolio/templates/blog_crud/story_blog.html
@@ -34,13 +34,12 @@
 
             <!--Div with Like Count, Date, and Time to read-->
             <div class = "w-full h-8 flex flex-row justify-between">
-                <!--Likes-->
-                <div class = "flex flex-row gap-2 text-gray-400 text-xl">
-                    <i class="bi bi-heart"></i>
-                    <p>{{blog_story.likes}}</p>
-                </div>
+                <!--Like button component-->
+                {% include 'components/like_button.html' %}
+
 
                 <div class = "flex flex-row gap-1 md:gap-2 mt-2 md:mt-0 text-gray-400 text-xs md:text-sm">
+                    <!--Date: January, 1, 2024 -->
                     <p>{{ blog_story.created_date|date:"F j, o" }}</p>
                     <p>•</p>
                     <p>5 min read</p>
@@ -50,7 +49,7 @@
             <!--Story Start Line Break-->
             <hr>
             <!--Story Contents Here-->
-            <p class = "indent-8">{{blog_story.story}}</p>
+            <p class = "indent-8">{{blog_story.story|safe}}</p>
 
             <!--Buttons to Edit and Delete - only visible to admin-->
             {% if user.is_authenticated %}
