--- a/portfolio/templates/blog_crud/edit_blog.html
+++ b/portfolio/templates/blog_crud/edit_blog.html
@@ -42,7 +42,8 @@
                     Update Story
                 </button>
 
-                <button type="submit" name = "delete_story" class="active:scale-95 w-1/3 h-12 rounded-lg border border-transparent font-semibold bg-red-500 text-white hover:bg-red-600 transition-all text-sm md:text-lg">
+                <button type="submit" name = "delete_story" class="active:scale-95 w-1/3 h-12 rounded-lg border border-transparent font-semibold bg-red-500 text-white hover:bg-red-600 transition-all text-sm md:text-lg"
+                onclick="return confirm('Are you sure you want to delete this blog?');">
                     Delete Story
                 </button>
 
