--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -56,9 +56,9 @@
                     Download Resume
                 </button>
 
-                <button class = "p-4 rounded-lg bg-blue-500 hover:bg-blue-600 active:scale-95 text-white text-base md:text-lg font-semibold">
+                <a href="{% url 'works' %}" target="_blank" class = "p-4 rounded-lg bg-blue-500 hover:bg-blue-600 active:scale-95 text-white text-base md:text-lg font-semibold">
                     View Works
-                </button>
+                </a>
 
             </div>
 
