--- a/portfolio/templates/blog_crud/story_blog.html
+++ b/portfolio/templates/blog_crud/story_blog.html
@@ -20,7 +20,7 @@
     </div>
 
     <!--Div with story page-->
-    <div class = "flex flex-col w-[90%] md:w-2/3 h-auto bg-white rounded-lg border border-gray-300 mt-4">
+    <div class = "flex flex-col w-[90%] md:w-2/3 min-h-screen bg-white rounded-lg border border-gray-300 mt-4">
         <!--Story page contents-->
         <div class = "flex flex-col gap-6 break-words p-8 m-4">
             <!--Title-->
@@ -47,7 +47,7 @@
             </div>
 
             <!--Story Start Line Break-->
-            <hr>
+            <hr class = "border border-gray-200">
             <!--Story Contents Here-->
             <p class = "indent-8">{{blog_story.story|safe}}</p>
 
@@ -64,17 +64,45 @@
             {% endif %} 
 
             <!--Story Line Break here-->
-            <hr>
+            <hr class = "border border-gray-200">
 
-            <!--Comment Section-->
-            <div class = "flex flex-col">
+            <!--Include comment section component-->
+            {% include 'components/comment_section.html' %}
 
+
+            <!--Post Comment Section-->
+            <br><br>
+            <div class = "flex flex-col gap-4 w-full p-16">
+                <h1 class = "text-2xl font-bold text-sky-950">Post a Comment</h1>
+                <!--Insert Form Here-->
+                <form hx-post="{% url 'post_comment' story_name=blog_story.title %}" 
+                hx-target="#comment_section" class = "flex flex-col gap-8 mt-4" 
+                hx-put="/" 
+                hx-on::after-request="this.reset()">
+                    {% csrf_token %}
+                    <!--Enter Name-->
+                    {% render_field comment_form.name class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+                    
+                    <!--Enter Email-->
+                    {% render_field comment_form.email class=" border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+                   
+                    <!--Enter Comment-->
+                    {% render_field comment_form.comment class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+        
+            
+                    <!--Submit Button-->
+                    <button type="submit" class="active:scale-95 w-full h-12 rounded-lg border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 transition-all text-lg">
+                        Post Comment
+                    </button>
+        
+                </form>
+        
             </div>
 
         </div>
     </div>  
 
-    <br><br><br>
+    <div class = "flex h-[10vh] bg-slate-200"></div>
 
     {% include 'shared/footer.html' %}
 
