added final changes

--- a/portfolio/templates/blog_crud/create_blog.html
+++ b/portfolio/templates/blog_crud/create_blog.html
@@ -13,19 +13,34 @@
     <div class = "w-full bg-white rounded-xl border border-gray-300">
         <form method = "POST" class = "flex flex-col gap-8 p-16">
             {% csrf_token %}
+
             <!--Enter Title-->
-            {% render_field form.title class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
-            
+            <div class = "flex flex-col gap-4">
+                <h1 class = "text-lg text-blue-950 font-bold">Title:</h1>
+                {% render_field form.title class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            </div>
+
             <!--Enter Caption-->
-            {% render_field form.caption class="h-24 border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            <div class = "flex flex-col gap-4">
+                <h1 class = "text-lg text-blue-950 font-bold">Caption:</h1>
+                {% render_field form.caption class="h-24 border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            </div>
 
             <!--Enter Story-->
-            {{ form.media }} 
-            {% render_field form.story class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
-           
+            <div class = "flex flex-col gap-4">
+                <!--Horizontal Div with label and word count-->
+                <div class = "flex flex-row justify-between">
+                    <h1 class = "text-lg text-blue-950 font-bold">Story:</h1>
+                    <h1 class = "text-lg text-blue-950"><b>Word Count:</b> <span id = "word_count"></span></h1>
+                </div>
+                {% render_field form.media %}
+                {% render_field form.story %}
+           </div>
             <!--Enter image url-->
-            {% render_field form.imageUrl class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
-
+           <div class = "flex flex-col gap-4">
+                <h1 class = "text-lg text-blue-950 font-bold">Image URL:</h1>
+                {% render_field form.imageUrl class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            </div>
     
             <!--Submit Button-->
             <button type="submit" class="active:scale-95 w-full h-12 rounded-lg border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 transition-all text-lg">
