--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -52,9 +52,9 @@
 
             <!--Buttons-->
             <div class = "flex flex-row gap-4 w-full pl-10">
-                <button class = "p-4 rounded-lg bg-sky-900 hover:bg-sky-950 active:scale-95 text-white text-base md:text-lg font-semibold">
+                <a href = "{% static 'files/cv_ali_kesserwani.pdf' %}" target="_blank" class = "p-4 rounded-lg bg-sky-900 hover:bg-sky-950 active:scale-95 text-white text-base md:text-lg font-semibold">
                     Download Resume
-                </button>
+                </a>
 
                 <a href="{% url 'works' %}" target="_blank" class = "p-4 rounded-lg bg-blue-500 hover:bg-blue-600 active:scale-95 text-white text-base md:text-lg font-semibold">
                     View Works
