--- a/portfolio/templates/shared/footer.html
+++ b/portfolio/templates/shared/footer.html
@@ -3,9 +3,9 @@
         <!--Social Media Buttons-->
         <div class="flex flex-row gap-8"
         x-data="{ socials: [
-            { icon: 'bi-linkedin', link: 'https://www.linkedin.com' },
-            { icon: 'bi-instagram', link: 'https://www.instagram.com' },
-            { icon: 'bi-github', link: 'https://www.github.com' },
+            { icon: 'bi-envelope-fill', link: 'mailto: akesserwani3@gatech.com' },
+            { icon: 'bi-linkedin', link: 'https://www.linkedin.com/in/alikesserwani/' },
+            { icon: 'bi-github', link: 'https://github.com/akesserwani' },
         ]}">
             <template x-for="social in socials" :key="social.icon">
                 <button class="px-4 py-4 aspect-square rounded-lg bg-blue-500 hover:bg-blue-600 active:scale-95 shadow-md text-white text-3xl font-semibold">
