--- a/portfolio/templates/blog_crud/blog.html
+++ b/portfolio/templates/blog_crud/blog.html
@@ -4,6 +4,7 @@
 
 {% load static %} 
 
+{% load functions %}
 
 {% load widget_tweaks %}
 
@@ -21,7 +22,7 @@
 <div class = "flex flex-col gap-6 bg-slate-200 w-full p-16">
 
     <!--Filter tab buttons-->
-    <div class="flex flex-row flex-wrap gap-4"
+   <!-- <div class="flex flex-row flex-wrap gap-4"
         x-data="{ tabs: [
             { id: 1, text: 'Featured' },
             { id: 2, text: 'Newest' },
@@ -34,7 +35,7 @@
                 x-text="tab.text">
             </button>
         </template>
-    </div>
+    </div> -->
 
     <div class = "flex flex-row flex-wrap gap-4">
 
@@ -56,7 +57,7 @@
                     <div class = "flex flex-row gap-1 md:gap-2 text-gray-400 text-xs md:text-sm">
                         <p>{{ blog.created_date|date:"F j, o" }}</p>
                         <p>•</p>
-                        <p>5 min read</p>
+                        <p>{{ blog.story | calculateReadTime }} min read</p>
                     </div>
                 </div>
 
