--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -17,16 +17,16 @@
             <h1 class = "text-4xl md:text-5xl text-sky-950 font-bold mt-8">Contact Ali</h1>
             <!--Contact Text-->
             <div class = "flex flex-col gap-8 text-sky-950 text-2xl mt-8">
-                <p><b>Institution Email:</b> akesser@uab.edu</p>
-                <p><b>Personal Email:</b> alikesserwani23@gmail.com</p>
+                <p><b>Institution Email:</b> <a href = "mailto:akesserwani3@gatech.com" class = "hover:underline">akesserwani3@gatech.edu</a></p>
+                <p><b>Personal Email:</b> <a href = "mailto:alikesserwani23@gmail.com" class = "hover:underline">alikesserwani23@gmail.com</a></p>
                 <p><b>Social Media:</b></p>
     
                 <!--Social Media Icons-->
                 <div class="flex flex-row gap-8"
                 x-data="{ socials: [
-                    { icon: 'bi-linkedin', link: 'https://www.linkedin.com' },
-                    { icon: 'bi-instagram', link: 'https://www.instagram.com' },
-                    { icon: 'bi-github', link: 'https://www.github.com' },
+                    { icon: 'bi-envelope-fill', link: 'mailto:akesserwani3@gatech.com' },
+                    { icon: 'bi-linkedin', link: 'https://www.linkedin.com/in/alikesserwani/' },
+                    { icon: 'bi-github', link: 'https://github.com/akesserwani' },
                 ]}">
                     <template x-for="social in socials" :key="social.icon">
                         <button class="px-4 py-4 aspect-square rounded-lg bg-blue-500 hover:bg-blue-600 active:scale-95 shadow-lg text-white text-3xl font-semibold">
@@ -42,24 +42,19 @@
     </div>
     <!--Right Box with image of Temple-->
     <div class = "w-full md:w-1/2 h-[70vh] md:h-[85vh] flex flex-col items-center align-middle justify-center">
-
-        <form method = "POST" class = "flex flex-col gap-4">
+        
+       <!--<form method = "POST" class = "flex flex-col gap-4">
             {% csrf_token %}
-            <!--Enter username-->
             {% render_field form.name class="border-gray-400 border-2 rounded-lg w-full py-4 bg-slate-200 text-gray-600 focus:outline-none focus:shadow-outline" %}
             
-            <!--Enter username-->
             {% render_field form.email class="border-gray-400 border-2 rounded-lg w-full py-4 bg-slate-200 text-gray-600 focus:outline-none focus:shadow-outline" %}
 
-            <!--Enter Password-->
             {% render_field form.message class="border-gray-400 border-2 rounded-lg w-full py-4 bg-slate-200 text-gray-600 focus:outline-none focus:shadow-outline" %}
             
-    
-            <!--Submit Button-->
             <button type="submit" class="active:scale-95 w-full h-16 rounded-lg border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 transition-all text-lg">
                 Send Message
             </button>
-        </form>
+        </form> -->
         
 
     </div>
