--- a/portfolio/templates/blog_crud/edit_blog.html
+++ b/portfolio/templates/blog_crud/edit_blog.html
@@ -33,6 +33,12 @@
            
             <!--Enter image url-->
             {% render_field form.imageUrl class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            
+            <!--Enter Tags-->
+            <div class = "flex flex-col gap-4">
+                <h1 class = "text-lg text-blue-950 font-bold">Tags (seperate by comma):</h1>
+                {% render_field form.tags class="border-gray-300 border-2 rounded-lg w-full py-4 bg-white text-gray-600 focus:outline-none focus:shadow-outline" %}
+            </div>
 
     
             <!--Bottom Buttons-->
